--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,15 +1,33 @@
 <section class="section">
   <div class="header d-flex justify-content-between">
-    <div><h4>School Compass</h4></div>
-    <div class="login_screen_handler">
-      <span (click)="isChecked = false">Student </span>
-      <mat-slide-toggle
-        [color]="'warn'"
-        [(ngModel)]="isChecked"
-      ></mat-slide-toggle>
-      <span (click)="isChecked = true">Teacher </span>
+    <h4 [class.mobile_font]="screenObserver.isMobile">School Compass</h4>
+    <div class="login_screen_handler d-inline-flex align-items-center">
+      <span
+        (click)="isChecked = false"
+        [class.mobile_font]="screenObserver.isMobile"
+        [ngStyle]="{ color: !isChecked ? 'var(--primary-550)' : 'black' }"
+        >Student</span
+      >
+      <div class="toggle-wrapper">
+        <div class="toggle transparent">
+          <input
+            hidden
+            id="transparent"
+            type="checkbox"
+            [(ngModel)]="isChecked"
+          />
+          <label class="toggle-item" for="transparent"> </label>
+        </div>
+      </div>
+      <span
+        (click)="isChecked = true"
+        [class.mobile_font]="screenObserver.isMobile"
+        [ngStyle]="{ color: isChecked ? 'var(--primary-550)' : 'black' }"
+        >Teacher
+      </span>
     </div>
   </div>
+  @if (screenObserver.isDesktop) {
   <div class="container-fluid d-flex align-items-center justify-content-center">
     <div class="row h-100 py-4 w-75 justify-content-center">
       <div
@@ -21,7 +39,9 @@
         <div class="form-container p-4 w-100">
           <div class="h4 mb-3">Login</div>
           <div class="input-container mb-3">
-            <div class="prefix-icon"></div>
+            <div class="prefix-icon d-flex align-items-center">
+              <span class="material-symbols-outlined"> person </span>
+            </div>
             <input
               autocomplete="off"
               [ariaAutoComplete]="'off'"
@@ -30,7 +50,9 @@
             />
           </div>
           <div class="input-container mb-3">
-            <div class="prefix-icon"></div>
+            <div class="prefix-icon d-flex align-items-center">
+              <span class="material-symbols-outlined"> key_vertical </span>
+            </div>
             <input
               autocomplete="off"
               [ariaAutoComplete]="'off'"
@@ -38,15 +60,72 @@
               [type]="hide ? 'password' : 'text'"
               placeholder="Password"
             />
-            <div class="suffix-icon"></div>
+            <div class="suffix-icon pt-1">
+              <span
+                class="material-symbols-outlined"
+                (click)="togglePasswordVisibility()"
+                >{{ hide ? 'visibility_off' : 'visibility' }}</span
+              >
+            </div>
           </div>
-          <div class="w-100 mb-3">Forget Password?</div>
-          <div class="w-100 mt-4 login_button text-center">Login</div>
+          <div class="w-100 mb-3 mobile_font">Forget Password?</div>
+          <div class="w-100 mt-4 login_button text-center" (click)="login()">
+            Login
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="footer d-flex justify-content-between">
+  } @else {
+  <div class="container d-flex align-items-center justify-content-center">
+    <div class="row h-100 w-100 py-4 w-75 justify-content-center">
+      <div class="col-md-6 image_baner d-flex justify-content-end pt-3">
+        <div [class]="isChecked ? 'teachers-section' : 'student-section'"></div>
+      </div>
+      <div class="col-md-6 form_section d-flex align-items-center">
+        <div class="form-container p-4 w-100">
+          <div class="h4 mb-3">Login</div>
+          <div class="input-container mb-3">
+            <div class="prefix-icon d-flex align-items-center">
+              <span class="material-symbols-outlined"> person </span>
+            </div>
+            <input
+              autocomplete="off"
+              [ariaAutoComplete]="'off'"
+              matInput
+              placeholder="Username"
+            />
+          </div>
+          <div class="input-container mb-3">
+            <div class="prefix-icon d-flex align-items-center">
+              <span class="material-symbols-outlined"> key_vertical </span>
+            </div>
+            <input
+              autocomplete="off"
+              [ariaAutoComplete]="'off'"
+              matInput
+              [type]="hide ? 'password' : 'text'"
+              placeholder="Password"
+            />
+            <div class="suffix-icon pt-1">
+              <span
+                class="material-symbols-outlined"
+                (click)="togglePasswordVisibility()"
+                >{{ hide ? 'visibility_off' : 'visibility' }}</span
+              >
+            </div>
+          </div>
+          <div class="w-100 mb-3 mobile_font">Forget Password?</div>
+          <div class="w-100 mt-4 login_button text-center" (click)="login()">
+            Login
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  }
+
+  <div class="footer d-flex justify-content-between mobile_font">
     <div>
       <span>Terms of Service | Privacy Policy </span>
     </div>
