--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,8 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
+@import 'variables';
 // Plus imports for other components in your app.
-
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
@@ -13,22 +12,29 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $School-Compass-365-fe-primary: mat.define-palette(mat.$indigo-palette);
-$School-Compass-365-fe-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$School-Compass-365-fe-accent: mat.define-palette(
+  mat.$pink-palette,
+  A200,
+  A100,
+  A400
+);
 
 // The warn palette is optional (defaults to red).
 $School-Compass-365-fe-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$School-Compass-365-fe-theme: mat.define-light-theme((
-  color: (
-    primary: $School-Compass-365-fe-primary,
-    accent: $School-Compass-365-fe-accent,
-    warn: $School-Compass-365-fe-warn,
-  ),
-  typography: mat.define-typography-config(),
-  density: 0
-));
+$School-Compass-365-fe-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $School-Compass-365-fe-primary,
+      accent: $School-Compass-365-fe-accent,
+      warn: $School-Compass-365-fe-warn,
+    ),
+    typography: mat.define-typography-config(),
+    density: 0,
+  )
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -37,5 +43,11 @@ $School-Compass-365-fe-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
