--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,13 +1,14 @@
 <section class="section">
   <div class="header d-flex justify-content-between">
     <h4 [class.mobile_font]="screenObserver.isMobile">School Compass</h4>
+    @if (!isAdmin) {
     <div class="login_screen_handler d-inline-flex align-items-center">
       <span
-        (click)="isStudent = false"
+        (click)="isTeacher = false"
         tabindex="0"
-        (keydown.enter)="isStudent = false"
+        (keydown.enter)="isTeacher = false"
         [class.mobile_font]="screenObserver.isMobile"
-        [ngStyle]="{ color: !isStudent ? 'var(--primary-550)' : 'black' }"
+        [ngStyle]="{ color: !isTeacher ? 'var(--primary-550)' : 'black' }"
         >Student</span
       >
       <div class="toggle-wrapper">
@@ -16,31 +17,32 @@
             hidden
             id="transparent"
             type="checkbox"
-            [(ngModel)]="isStudent"
+            [(ngModel)]="isTeacher"
           />
           <label class="toggle-item" for="transparent"> </label>
         </div>
       </div>
       <span
-        (click)="isStudent = true"
+        (click)="isTeacher = true"
         tabindex="1"
-        (keydown.enter)="isStudent = false"
+        (keydown.enter)="isTeacher = false"
         [class.mobile_font]="screenObserver.isMobile"
-        [ngStyle]="{ color: isStudent ? 'var(--primary-550)' : 'black' }"
+        [ngStyle]="{ color: isTeacher ? 'var(--primary-550)' : 'black' }"
         >Teacher
       </span>
     </div>
+    }
   </div>
-  @if (screenObserver.isDesktop) {
+  @if (!screenObserver.isMobile) {
   <div class="container-fluid d-flex align-items-center justify-content-center">
     <div class="row h-100 py-4 w-75 justify-content-center">
       <div
         class="col-md-6 image_baner d-flex align-items-center justify-content-end"
       >
-        <div [class]="isStudent ? 'teachers-section' : 'student-section'"></div>
+        <div [class]="isTeacher ? 'teachers-section' : 'student-section'"></div>
       </div>
       <div class="col-md-6 form_section d-flex align-items-center">
-        <div class="form-container p-4 w-100">
+        <div class="form-container p-4 w-100" [formGroup]="loginForm">
           <div class="h4 mb-3">Login</div>
           <div class="input-container mb-3">
             <div class="prefix-icon d-flex align-items-center">
@@ -50,6 +52,7 @@
               autocomplete="off"
               [ariaAutoComplete]="'off'"
               tabindex="3"
+              formControlName="username"
               matInput
               placeholder="Username"
             />
@@ -63,7 +66,8 @@
               [ariaAutoComplete]="'off'"
               matInput
               tabindex="4"
-              [type]="hide ? 'password' : 'text'"
+              formControlName="password"
+              [type]="hidePassword ? 'password' : 'text'"
               placeholder="Password"
             />
             <div class="suffix-icon pt-1">
@@ -72,7 +76,7 @@
                 (click)="togglePasswordVisibility()"
                 (keydown.enter)="togglePasswordVisibility()"
                 tabindex="5"
-                >{{ hide ? 'visibility_off' : 'visibility' }}</span
+                >{{ hidePassword ? 'visibility_off' : 'visibility' }}</span
               >
             </div>
           </div>
@@ -93,10 +97,10 @@
   <div class="container d-flex align-items-center justify-content-center">
     <div class="row h-100 w-100 py-4 w-75 justify-content-center">
       <div class="col-md-6 image_baner d-flex justify-content-end pt-3">
-        <div [class]="isStudent ? 'teachers-section' : 'student-section'"></div>
+        <div [class]="isTeacher ? 'teachers-section' : 'student-section'"></div>
       </div>
       <div class="col-md-6 form_section d-flex align-items-center">
-        <div class="form-container p-4 w-100">
+        <div class="form-container p-4 w-100" [formGroup]="loginForm">
           <div class="h4 mb-3">Login</div>
           <div class="input-container mb-3">
             <div class="prefix-icon d-flex align-items-center">
@@ -107,6 +111,7 @@
               [ariaAutoComplete]="'off'"
               matInput
               tabindex="3"
+              formControlName="username"
               placeholder="Username"
             />
           </div>
@@ -120,7 +125,8 @@
               matInput
               (keydown.enter)="login()"
               tabindex="4"
-              [type]="hide ? 'password' : 'text'"
+              [type]="hidePassword ? 'password' : 'text'"
+              formControlName="password"
               placeholder="Password"
             />
             <div class="suffix-icon pt-1">
@@ -129,7 +135,7 @@
                 tabindex="5"
                 (click)="togglePasswordVisibility()"
                 (keydown.enter)="togglePasswordVisibility()"
-                >{{ hide ? 'visibility_off' : 'visibility' }}</span
+                >{{ hidePassword ? 'visibility_off' : 'visibility' }}</span
               >
             </div>
           </div>
