updated login store

--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -19,7 +19,7 @@
             type="checkbox"
             [(ngModel)]="isTeacher"
           />
-          <label class="toggle-item" for="transparent"> </label>
+          <span class="toggle-item"> </span>
         </div>
       </div>
       <span
