--- a/src/app/core/components/side-nav/side-nav.component.html
+++ b/src/app/core/components/side-nav/side-nav.component.html
@@ -9,10 +9,11 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list class="pt-0">
-      @for (item of naveItem; track $index) {
+      @for (item of naveItem; track i; let i = $index) {
       <a
         mat-list-item
         [routerLink]="item.routerLink"
+        [class]="i == 2 ? 'router-link-active' : null"
         routerLinkActive="router-link-active"
       >
         <div class="d-flex align-items-center nav_list">
