updated copyright line

--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -148,11 +148,7 @@
   </div>
   }
 
-  <div class="footer d-flex justify-content-between mobile_font">
-    <div>
-      <span>Terms of Service | Privacy Policy </span>
-    </div>
-    <div>School Compass 365. All rights reserved</div>
-    <div>Contact Us</div>
+  <div class="footer d-flex justify-content-center align-items-center">
+    <small> &copy; 2024 School Compass 365. All rights reserved</small>
   </div>
 </section>
