--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,3 +51,6 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
+mat-icon {
+  font-family: 'Material Symbols Outlined';
+}
