--- a/src/app/core/components/side-nav/side-nav.component.scss
+++ b/src/app/core/components/side-nav/side-nav.component.scss
@@ -1,5 +1,6 @@
 .sidenav-container {
   height: 100%;
+  background-color: var(--color-background);
 }
 
 .sidenav {
@@ -36,6 +37,11 @@
   border-top-right-radius: 0;
 }
 .mat-mdc-list-base {
-  height: calc(100vh - (10vh));
+  height: calc(100vh - (var(--mat-toolbar-standard-height)));
   background-color: white;
+}
+
+main {
+  padding: 1.5rem 1rem 0.5rem;
+  height: calc(100vh - (var(--mat-toolbar-standard-height)));
 }
