--- a/src/app/core/modules/forms/form.component.html
+++ b/src/app/core/modules/forms/form.component.html
@@ -1,7 +1,15 @@
-@for(formElement of formConfig; track i; let i = $index) {
-@if(formElement.element.key){
-<sc-form-element
-  [formElement]="formElement"
-  [control]="$any(formGroup.get(formElement.element.key))"
-></sc-form-element>
-} }
+<section>
+  <div class="form-container p-4">
+    <div class="row justify-content-between">
+      @for(formElement of formConfig; track i; let i = $index) {
+      @if(formElement.element.key){
+      <div [class]="formElement.element.css_class || 'col-md-6'">
+        <sc-form-element
+          [formElement]="formElement"
+          [control]="$any(formGroup.get(formElement.element.key))"
+        ></sc-form-element>
+      </div>
+      }}
+    </div>
+  </div>
+</section>
