--- a/src/app/core/modules/forms/text-element/text-element.component.html
+++ b/src/app/core/modules/forms/text-element/text-element.component.html
@@ -1,4 +1,4 @@
-<mat-form-field>
+<mat-form-field style="width: 100%" appearance="outline">
   <mat-label>{{ element.label }}</mat-label>
   <input
     matInput
