fix: ssr navigation issues

--- a/src/app/core/components/side-nav/side-nav.component.html
+++ b/src/app/core/components/side-nav/side-nav.component.html
@@ -13,7 +13,7 @@
       <a
         mat-list-item
         [routerLink]="item.routerLink"
-        [class]="i === 2 ? 'router-link-active' : null"
+        [routerLinkActive]="'router-link-active'"
       >
         <div class="d-flex align-items-center nav_list">
           <span class="material-symbols-outlined">
