--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,3 +54,11 @@ body {
 mat-icon {
   font-family: 'Material Symbols Outlined';
 }
+.mdc-text-field--filled:not(.mdc-text-field--disabled),
+.mdc-text-field--focused {
+  background-color: transparent !important;
+}
+.mat-mdc-form-field.mat-focused .mat-mdc-form-field-focus-overlay,
+.mat-mdc-text-field-wrapper:hover .mat-mdc-form-field-focus-overlay {
+  opacity: 0 !important;
+}
