--- a/src/app/core/modules/forms/form.component.html
+++ b/src/app/core/modules/forms/form.component.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-between">
       @for(formElement of formConfig; track i; let i = $index) {
       @if(formElement.element.key){
-      <div [class]="formElement.element.css_class || 'col-md-6'">
+      <div [class]="formElement.element.cssClass || 'col-md-6'">
         <sc-form-element
           [formElement]="formElement"
           [control]="$any(formGroup.get(formElement.element.key))"
