--- a/src/app/core/modules/forms/text-element/text-element.component.html
+++ b/src/app/core/modules/forms/text-element/text-element.component.html
@@ -1,12 +1,35 @@
-<mat-form-field style="width: 100%" appearance="outline">
+<mat-form-field style="width: 100%">
   <mat-label>{{ element.label }}</mat-label>
+  @if ( ['text', 'email', 'password',
+  'confirmPassword'].includes(element.validateAs)) {
   <input
     matInput
-    [type]="element.validateAs || 'text'"
+    [type]="
+      element.validateAs === 'confirmPassword' ? 'password' : element.validateAs
+    "
+    [minlength]="element.minLength || null"
+    [maxlength]="element.maxLength || null"
     [placeholder]="element.placeholder || ''"
     [required]="element.required || false"
+    [value]="element.value || ''"
     [readonly]="element.readonly || false"
     [hidden]="element.hidden || false"
     [formControl]="control"
   />
+  } @else {
+  <input
+    matInput
+    [scFormatting]="element.validateAs"
+    [pattern]="element.pattern || ''"
+    [type]="'text'"
+    [min]="element.min || null"
+    [max]="element.max || null"
+    [placeholder]="element.placeholder || ''"
+    [required]="element.required || false"
+    [value]="element.value || ''"
+    [readonly]="element.readonly || false"
+    [hidden]="element.hidden || false"
+    [formControl]="control"
+  />
+  }
 </mat-form-field>
