cookieService & redirection with role

--- a/src/app/modules/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/modules/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,4 @@
 <sc-side-nav [naveItem]="navConfig">
   <sc-form [formConfig]="formConfig" #form></sc-form>
+  <router-outlet></router-outlet>
 </sc-side-nav>
