fix: updated width and date picker and label options

--- a/src/app/core/modules/forms/button-element/button-element.component.html
+++ b/src/app/core/modules/forms/button-element/button-element.component.html
@@ -18,7 +18,7 @@
   [hidden]="element.hidden"
   [class]="element.cssClass"
   [type]="element.type"
-  [style]="element.width ? { width: element.width } : null"
+  [style]="element.width ? { width: element.width } : { width: '100%' }"
   [disabled]="element.disabled"
   (click)="(element.onClick); clicked.emit()"
 >
@@ -31,7 +31,7 @@
   [hidden]="element.hidden"
   [class]="element.cssClass"
   [type]="element.type"
-  [style]="element.width ? { width: element.width } : null"
+  [style]="element.width ? { width: element.width } : { width: '100%' }"
   [disabled]="element.disabled"
   (click)="(element.onClick); clicked.emit()"
 >
@@ -44,7 +44,7 @@
   [hidden]="element.hidden"
   [class]="element.cssClass"
   [type]="element.type"
-  [style]="element.width ? { width: element.width } : null"
+  [style]="element.width ? { width: element.width } : { width: '100%' }"
   [disabled]="element.disabled"
   (click)="(element.onClick); clicked.emit()"
 >
@@ -59,7 +59,7 @@
   [hidden]="element.hidden"
   [class]="element.cssClass"
   [type]="element.type"
-  [style]="element.width ? { width: element.width } : null"
+  [style]="element.width ? { width: element.width } : { width: '100%' }"
   [disabled]="element.disabled"
   (click)="(element.onClick); clicked.emit()"
 >
@@ -74,7 +74,7 @@
   [hidden]="element.hidden"
   [class]="element.cssClass"
   [type]="element.type"
-  [style]="element.width ? { width: element.width } : null"
+  [style]="element.width ? { width: element.width } : { width: '100%' }"
   [disabled]="element.disabled"
   (click)="(element.onClick); clicked.emit()"
 >
@@ -89,7 +89,7 @@
   [hidden]="element.hidden"
   [class]="element.cssClass"
   [type]="element.type"
-  [style]="element.width ? { width: element.width } : null"
+  [style]="element.width ? { width: element.width } : { width: '100%' }"
   [disabled]="element.disabled"
   (click)="(element.onClick); clicked.emit()"
 >
