--- a/src/app/core/modules/forms/label-element/label-element.component.html
+++ b/src/app/core/modules/forms/label-element/label-element.component.html
@@ -1,1 +1,8 @@
-<p>label-element works!</p>
+<span
+  [class]="element.cssClass"
+  [style]="element.width ? { width: element.width } : null"
+  [title]="element.hint"
+  [hidden]="element.hidden"
+>
+  {{ element.label }}
+</span>
