--- a/src/app/core/modules/forms/date-element/date-element.component.html
+++ b/src/app/core/modules/forms/date-element/date-element.component.html
@@ -1,1 +1,21 @@
-<p>date-element works!</p>
+<mat-form-field
+  [style]="element.width ? { width: element.width } : { width: '100%' }"
+>
+  <mat-label>{{ element.label }}</mat-label>
+  <input
+    matInput
+    [matDatepicker]="picker"
+    [formControl]="control"
+    [matDatepickerFilter]="filter"
+  />
+  @if(element.hint){
+  <mat-hint>{{ element.hint }}</mat-hint>
+  } @if(!element.disabled){
+  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+  }
+  <mat-datepicker
+    [dateClass]="dateClass"
+    [touchUi]="screenObserver.isMobile || null"
+    #picker
+  ></mat-datepicker>
+</mat-form-field>
