added error component

--- a/src/app/core/modules/forms/checkbox-element/checkbox-element.component.html
+++ b/src/app/core/modules/forms/checkbox-element/checkbox-element.component.html
@@ -8,4 +8,8 @@
 </mat-checkbox>
 @if(element.hint){
 <mat-hint>{{ element.hint }}</mat-hint>
+} @if(control.errors){
+<mat-error>
+  <sc-error [element]="element" [errors]="control.errors"></sc-error>
+</mat-error>
 }
