--- a/src/app/core/modules/forms/textarea-element/textarea-element.component.html
+++ b/src/app/core/modules/forms/textarea-element/textarea-element.component.html
@@ -4,13 +4,23 @@
   <mat-label>{{ element.label }}</mat-label>
   <textarea
     matInput
+    [minlength]="element.minLength || null"
+    [maxlength]="element.maxLength || null"
     [placeholder]="element.placeholder || ''"
     [required]="element.required || false"
     [readonly]="element.readonly || false"
     [hidden]="element.hidden || false"
     [formControl]="control"
   ></textarea>
-  @if(element.hint){
+  @if(control.errors){
+  <mat-error>
+    <sc-error
+      [element]="element"
+      [errors]="control.errors"
+      [minLength]="element.minLength"
+    ></sc-error>
+  </mat-error>
+  } @if(element.hint){
   <mat-hint>{{ element.hint }}</mat-hint>
   }
 </mat-form-field>
