completed profile design

--- a/src/app/core/components/login/login.component.scss
+++ b/src/app/core/components/login/login.component.scss
@@ -31,10 +31,10 @@
         border-radius: var(--borderRadius-xxxl);
         width: 100%;
         &.teachers-section {
-          background-image: url(/assets/images/teachers_login.jpeg);
+          background-image: url(/assets/images/teachers_login.webp);
         }
         &.student-section {
-          background-image: url(/assets/images/students_login.jpeg);
+          background-image: url(/assets/images/students_login.webp);
         }
       }
     }
