--- a/src/app/core/components/side-nav/side-nav.component.scss
+++ b/src/app/core/components/side-nav/side-nav.component.scss
@@ -45,3 +45,37 @@ main {
   padding: 1.5rem 1rem 0.5rem;
   height: calc(100vh - (var(--mat-toolbar-standard-height)));
 }
+
+.profile_container {
+  cursor: pointer;
+  column-gap: 15px;
+  transition: 0.4s;
+  background-color: white;
+  color: rgba(black, 0.65);
+  line-height: 1.2;
+  min-width: var(--width-Sz20);
+  box-shadow: var(--boxShadow-s);
+  border-radius: var(--borderRadius-xxxl);
+
+  &:hover {
+    box-shadow: var(--boxShadow-xl-mid);
+  }
+  .profile {
+    font-size: 0.9rem;
+    .profile_name,
+    .profile_email {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: var(--width-Sz21);
+    }
+    .profile_name {
+      font-size: 0.95em;
+      font-weight: 500;
+      color: rgba(0, 0, 0, 0.541);
+    }
+    .profile_email {
+      font-size: 0.7em;
+      color: gray;
+    }
+  }
+}
